<resources>
    <string name="app_name">PayBill</string>
    <string name="description_home"> Give the best of yourself !</string>
    <string name="description"> Notre entreprise! </string>
    <string name="description_bill"> Description </string>
    <string name="connection">Connection</string>
    <string name="hour"> We are available all days / 24. </string>
    <string name="txt_bill"> Speed   in your hands. Deposit for free. Pay your bills free of charge. </string>
    <string name="title_two"> PayBill is: </string>
    <string name="txt_already_account">
        Do you have an account?  log in ! </string>
    <string name="login">Login</string>
    <string name="state">état</string>
    <string name="type">type</string>
    <string name="password">Password</string>
    <string name="contactHaut">Can we help you !</string>
    <string name="connect">Connect</string>
    <string name="deconnexion">Log out</string>
    <string name="NumberAccount">Number Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="contact">Contact us !</string>
    <string name="paid_bill">Paid Bill</string>
    <string name="unpaid_bill">Unpaid Bill</string>
    <string name="location">Location</string>
    <string name="help">Help</string>
    <string name="billers">billers</string>
    <string name="back">Back</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email </string>
    <string name="add_bill">Add Bill</string>
    <string name="deadline">Deadline</string>
    <string name="amount">Amount</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="women">Women</string>
    <string name="type_bill">Type Bill</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="wait">Wait</string>
    <string name="error_fields">Please fill the required field</string>
    <string name="error_connection">Connection error</string>
    <string name="error_parameters">Invalid parameters</string>
    <string name="error_inscription">Inscription failed</string>
    <string name="success_inscription">Inscription succeed</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location_fragment">Map</string>
    <string name="account">Account</string>
    <string name="bill">Bills</string>

</resources>