<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_paid"
            android:title="@string/bill" />

        <item
            android:id="@+id/nav_biller"
            android:icon="@drawable/ic_listf_bill"
            android:title="@string/billers" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_ocation"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

    </group>
</menu>