<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic_14"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="left"
        android:src="@mipmap/ic_15_foreground" />

    <TextView
        android:padding="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/dim_title"
        android:gravity="center"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="20dp"
        android:hint="@string/login"
        android:layout_marginRight="@dimen/dim_button"
        android:layout_marginLeft="@dimen/dim_button"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/dim_button"
        android:layout_marginLeft="@dimen/dim_button"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_marginRight="@dimen/dim_button"
        android:layout_marginLeft="@dimen/dim_button"
        android:backgroundTint="@color/black"
        android:layout_marginTop="100dp"
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_marginRight="@dimen/dim_button"
        android:layout_marginLeft="@dimen/dim_button"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>

