<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constrainedHeight="true"
    android:layout_margin="@dimen/dim_all"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/imageText"
        android:layout_width="129dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="25dp"

        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:weightSum="2">

        <!--premier section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="Facture N°"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/numero"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="Numero"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--deuxieme section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/deadline"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/deadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/deadline"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <!--trosieme section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/amount"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@id/amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/account"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--quatrieme section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/type"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/type"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--cinquieme section-->
        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/state"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:text="@string/state"
                android:textColor="#ff5733"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>