<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="left"
            android:src="@mipmap/ic_1" />

        <TextView
            android:layout_margin="@dimen/dim_all"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/hour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all"
            android:textColor="@color/black"
            android:text="@string/txt_bill"
            android:textSize="18dp" />


                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/GridLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:orientation="horizontal"
                    tools:context=".GridXMLActivity" >

                        <ImageView
                            android:layout_width="209dp"
                            android:layout_height="250dp"
                            android:layout_gravity="left|top"
                            android:src="@mipmap/ic_3" />

                        <ImageView
                            android:layout_width="207dp"
                            android:layout_height="250dp"
                            android:layout_gravity="left|top"
                            android:src="@mipmap/ic_4" />
                        <ImageView
                            android:layout_width="209dp"
                            android:layout_height="250dp"
                            android:layout_gravity="left|top"
                            android:src="@mipmap/ic_5" />

                        <ImageView
                            android:layout_width="207dp"
                            android:layout_height="250dp"
                            android:layout_gravity="left|top"
                            android:src="@mipmap/ic_6" />

                </GridLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim_all"
                    android:textColor="@color/black"
                    android:text="@string/title_two"
                    android:textSize="35dp" />

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/GridLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:orientation="horizontal"
                    tools:context=".GridXMLActivity" >

                        <ImageView
                            android:layout_width="209dp"
                            android:layout_height="250dp"
                            android:layout_gravity="left|top"
                            android:src="@mipmap/ic_8" />

                        <ImageView
                            android:layout_width="207dp"
                            android:layout_height="250dp"
                            android:layout_gravity="left|top"
                            android:src="@mipmap/ic_9" />


                </GridLayout>

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/GridLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="1"
                    android:orientation="horizontal"
                    android:textColor="@color/black"
                    tools:context=".GridXMLActivity" >

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="120dp"
                            android:textColor="@color/black"
                            android:text="@string/contact" />


                </GridLayout>

        </LinearLayout>

   </ScrollView>